# tv-script-recommender

./: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_SPEC.md  README.md  pyproject.toml
backend/: app.py
backend/api/: routes.py
backend/core/: config.py
backend/db/: show_store.py  vector_store.py
backend/metadata/: enrich.py  tmdb.py  tvdb.py
backend/models/: schemas.py
backend/pipeline/: embed.py  extract.py  hf_subtitles.py  ingest.py  srt_parser.py  subtitles.py
backend/recommender/: engine.py
scripts/: ingest_batch.py  ingest_from_hf.py  ingest_show.py
tests/: test_api.py  test_extract.py  test_hf_subtitles.py  test_metadata.py  test_pipeline.py  test_recommender.py  test_show_store.py  test_srt_parser.py  test_subtitles.py
